latexsupport: allow indexes to be created
The current default build won't build them, any documents using
this will have to alter their configure.ac to change the latex
build.

Currently doesn't produce an index in html.

--- a/applications/latexsupport/starlink.cls
+++ b/applications/latexsupport/starlink.cls
@@ -123,6 +123,8 @@
 %... allow environments using verbatim
 \RequirePackage{fancyvrb}
 
+%... allow starlink docs to use indexes
+\RequirePackage{makeidx}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
