Fluxes: SUN/213 rotated figure 1

--- a/applications/fluxes/sun213.tex
+++ b/applications/fluxes/sun213.tex
@@ -257,7 +257,7 @@ and the difference in Martian right ascensions between the Earth and the Sun
 $A_S - A_E$) far into the future.
 
 \begin{figure}[t]
-\includegraphics[angle=-90,width=\textwidth]{sun213_fig1}
+\includegraphics[width=\textwidth]{sun213_fig1}
 \vspace*{-0.5cm}
 \caption{Martian brightness temperatures}
 \label{fig:mars}
